# Jxlog

./: .clang-format  .gitignore  CMakeLists.txt  README.md
decode/: CMakeLists.txt  decode.cpp  decode_formatter.cpp  decode_formatter.h
example/: CMakeLists.txt  logger_example.cc
logger/: CMakeLists.txt  log_factory.h
logger/compress/: compress.h  zstd_compress.cpp  zstd_compress.h
logger/context/: executor.h  thread_queue.h
logger/crypt/: aes_crypt.cpp  aes_crypt.h  crypt.cpp
logger/formatter/: formatter.h
logger/helpers/: deffer.h  internal_log.h
logger/mmap/: mmap_win.cpp  mmapper.cpp
logger/proto/: effective_msg.pb.cc  effective_msg.proto
logger/sinks/: effective_sink.cpp  effective_sink.h  sink.h
logger/utils/: sys_util.cpp  sys_util_linux.cpp  sys_util_win.cpp
script/: build_linux.py
src/: CMakeLists.txt  async_logger.cpp  async_logger.h  internal_log.h  log.h  log_common.h  log_factory.cpp  log_msg.h  logger.cpp  logger.h  space.h  test.cpp  variadic_logger.h
src/compress/: compress.h  zlib_compress.cpp  zlib_compress.h  zstd_compress.cpp  zstd_compress.h
src/context/: context.cpp  context.h  executor.cpp  executor.h  thread_pool.cpp  thread_pool.h  thread_queue.h
src/crypt/: aes_crypt.cpp  aes_crypt.h  crypt.cpp  crypt.h
src/formatter/: default_formatter.cpp  default_formatter.h  effective_formatter.cpp  effective_formatter.h  formatter.cpp  formatter.h
src/helpers/: deffer.h  internal_log.h
src/mmap/: mmapper.cpp  mmapper.h  mmapper_linux.cpp  mmappr.cpp
src/proto/: effective_msg.pb.h
src/sinks/: console_sink.cpp  console_sink.h  effective_sink.cpp  effective_sink.h  sink.h
src/utils/: file_util.cpp  file_util.h  sys_util.h  sys_util_linux.cpp  sys_util_win.cpp  timer_count.h
